condensing templates, and adding build args

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:1.23.2-alpine
-COPY ./nginx.conf.tmpl /nginx.conf.template
+ARG TEMPLATE_FILE
+COPY ./$TEMPLATE_FILE /nginx.conf.template
 COPY ./entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
